Split DraftCMOService.prepareCaseDetails into DraftCMOService.removeTransientObjectsFromCaseData and DraftCMOService.populateCaseDataWithCMO